network-policies/default-allow-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-allow-ingress
spec:
  policyTypes:
  - Ingress
  ingress:
  - {}
  podSelector: {}
