network-policies/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-ingress-egress-maintenance
spec:
  podSelector: 
    matchLabels:
      app: maintenance
  policyTypes:
  - Ingress
  - Egress
